add:添加增删改查用户模块err判断
