# docs/swagger.yaml
@@ -52,6 +52,22 @@ paths:
       summary: 删除用户
       tags:
       - 用户模块
+  /user/getUser:
+    get:
+      parameters:
+      - description: id
+        in: query
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{"code","data", "msg"}'
+          schema:
+            type: string
+      summary: 获取单一用户
+      tags:
+      - 用户模块
   /user/getUserList:
     get:
       responses:
